Fix animation on mobile

--- a/priv/source/stylesheets/blocks/_animation.sass
+++ b/priv/source/stylesheets/blocks/_animation.sass
@@ -1,6 +1,6 @@
 $transition: 1.4s
   
-#get-scroll  
+#get-scroll
   position: fixed
   top: 0px
   left: 0px
@@ -9,21 +9,24 @@ $transition: 1.4s
   z-index: -1
 
 [data-animation="from-bottom-to-up"]
-  transition: $transition
-  transform: translateY(170%)
-  opacity: 0
-  .anim &
-    opacity: 1
-    transform: translateY(0)
+  +at-breakpoint(lap)
+    transition: $transition
+    transform: translateY(170%)
+    opacity: 0
+    .anim &
+      opacity: 1
+      transform: translateY(0)
 
 [data-animation="from-right-to-left"]
-  transition: $transition
-  transform: translateX(170%)
-  opacity: 0
-  .anim &
-    opacity: 1
-    transform: translateX(0)
+  +at-breakpoint(lap)
+    transition: $transition
+    transform: translateX(170%)
+    opacity: 0
+    .anim &
+      opacity: 1
+      transform: translateX(0)
 
 [data-transition="transition--xl"]
-  transition: 3s
+  +at-breakpoint(lap)
+    transition: 3s
 
