--- a/priv/source/stylesheets/blocks/_button.sass
+++ b/priv/source/stylesheets/blocks/_button.sass
@@ -113,9 +113,9 @@ input[type="button"]
   transform: translateY(100px)
   transition: all 1s .5s linear
 
-  .body-loaded .hero__homepage &
-    opacity: 1
-    transform: translateY(0px)
+.body-loaded .hero--homepage .button__with-arrow
+  opacity: 1
+  transform: translateY(0px)
 
 .button--menu
   display: flex
