--- a/priv/source/stylesheets/blocks/_canvas.sass
+++ b/priv/source/stylesheets/blocks/_canvas.sass
@@ -69,6 +69,7 @@
     border: none
     
 .canvas__main
+  overflow-x: hidden
   main
     color: $white-color
 
